--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "reactflow": "^11.11.4",
-    "marked": "^15.0.12"
+    "marked": "^15.0.12",
+    "lucide-react": "^0.379.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
