--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tiptap/extension-underline": "^2.13.0",
     "@tiptap/react": "^2.13.0",
     "@tiptap/starter-kit": "^2.13.0",
+    "dagre": "^0.8.5",
     "lucide-react": "^0.513.0",
     "marked": "^15.0.12",
     "react": "^19.1.0",
