--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@tiptap/extension-link": "^2.13.0",
     "@tiptap/extension-underline": "^2.13.0",
     "@tiptap/react": "^2.13.0",
     "@tiptap/starter-kit": "^2.13.0",
     "dagre": "^0.8.5",
+    "dompurify": "^3.1.0",
     "lucide-react": "^0.513.0",
     "marked": "^15.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "reactflow": "^11.11.4",
-    "tiptap-markdown": "^0.8.10",
-    "dompurify": "^3.1.0"
+    "tiptap-markdown": "^0.8.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
